# bazel_compose

./: .gitignore  CAPER.md  LICENSE  README.md  WORKSPACE  docker-compose.yml  proxy.yml
caper/bazel_compose/: BUILD.bazel  bazel.py  compose.py  main.py  watcher.py
caper/example/: BUILD.bazel  main.py
